# inverter-desktop

./: .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  .scorecard.yaml  APPLE_CODE_SIGNING.md  CHANGELOG.md  Dockerfile  FUZZING.md  LICENSE  OPENSSF_BADGE_GUIDE.md  OSS_FUZZ_GUIDE.md  OSS_FUZZ_SUMMARY.md  README.md  SCORECARD.md  SECURITY.md  SECURITY_STATUS.md  _typos.toml  biome.json  build.sh  commit.txt  commitlint.config.ts  config.json  index.html  oss-fuzz.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.ts  renovate.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/: dependabot.yml  settings.yml
.github/workflows/: auto-approve.yml  auto-merge.yml  cargo-audit.yml  ci.yml  clusterfuzzlite.yml  codeql.yml  dependency-review.yml  dependency-update.yml  fuzz.yml  mobile.yml  nightly.yml  openssf-best-practices.yml  oss-fuzz-monitoring.yml  publish-release.yml  publish.yml  release-bot.yml  release.yml  rust-clippy.yml  scorecard.yml  sonarqube.yml  trivy-fs.yml  unit-tests.yml
infra/: Pulumi.dev.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json
scripts/: monitor-oss-fuzz.sh  patch_pbxproj.py  run-scorecard.sh  setup-fuzzing.sh
src/: About.vue  App.vue  Config.vue  button-overrides.css  config.ts  logger.ts  main.ts  style.css  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/fuzz/: Cargo.toml  project.yaml
src-tauri/fuzz/dictionaries/: json.dict
src-tauri/fuzz/fuzz_targets/: fuzz_command_parsing.rs  fuzz_json_parsing.rs  fuzz_mqtt_handling.rs
src-tauri/src/: biometric.m  ha_api.rs  lib.rs  main.rs  mqtt.rs  tray_icon.rs
src/__tests__/: ConsoleLog.test.ts  SidePanel.test.ts  coerceBooleans.test.ts  isHaEntity.test.ts  useCoerceBool.test.ts  useHA.test.ts  utils.test.ts
src/components/: AppHeader.vue  AuthScreen.vue  BatterySolarPanel.vue  ChartPanel.vue  ConsoleLog.vue  ContextMenu.vue  DailyStats.vue  EntityAutocompleteInput.vue  ErrorBoundary.vue  HaEntitiesEditor.vue  HeaderTogglesEditor.vue  LoadsTable.vue  NotificationHistory.vue  SidePanel.vue  StatCards.vue  StatusBar.vue
src/composables/: useChart.ts  useConfigForm.ts  useConnection.ts  useHA.ts  useHAEntityManager.ts  useInverterState.ts  useSystemNotifications.ts  useTheme.ts
src/i18n/: en.ts  index.ts
src/plugins/: vuetify.ts
src/types/: ha.ts  vue-awesome-button.d.ts
