[package]
name = "inverter-dashboard"
version = "1.0.17"
description = "Desktop application for monitoring Victron inverter systems via MQTT"
authors = ["4alvit <4alvit@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/victron-venus/inverter-desktop"
homepage = "https://github.com/victron-venus/inverter-desktop"
keywords = ["victron", "inverter", "mqtt", "dashboard", "tauri"]
categories = ["gui", "network-programming"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "inverter_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rumqttc = "0.25"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
