[package]
name = "inverter-dashboard"
version = "2.0.4"
description = "Desktop application for monitoring Victron inverter systems via MQTT"
authors = ["4alvit <4alvit@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/victron-venus/inverter-desktop"
homepage = "https://github.com/victron-venus/inverter-desktop"
keywords = ["victron", "inverter", "mqtt", "dashboard", "tauri"]
categories = ["gui", "network-programming"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "inverter_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rumqttc = { package = "rumqttc-v4-next", version = "0.33" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.13", features = ["json"] }
tauri-plugin-log = "2"
log = "0.4.32"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "macos")'.dependencies]
ab_glyph = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
